socket authorization working? still needs testing

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "morgan": "~1.7.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1",
+    "nedb-session-store": "^1.1.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.3"
   },
