--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "^2.5.2",
+    "electron": "^1.6.6",
     "express": "~4.13.4",
     "express-session": "^1.15.2",
     "morgan": "~1.7.0",
