field of view changed to 70, minecraft's default

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    // "checkJs": true
+    "target": "ES6"
   },
   "include": [
     "public/js/*",
