--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "electron": "./node_modules/.bin/electron electron.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
