changed stuff so it can run after being packaged

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
-    "electron": "./node_modules/.bin/electron electron.js"
+    "start": "./node_modules/.bin/electron electron.js",
+    "server": "node ./bin/www",
+    "server-dev": "nodemon ./bin/www",
+    "electron": "./node_modules/.bin/electron electron.js",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,10 +29,10 @@
     "socket.io": "^1.7.3"
   },
   "devDependencies": {
+    "electron-packager": "^8.7.0",
     "nodemon": "^1.11.0"
   },
   "description": "This is a HTTP and TCP server which OpenComputers robots can read and execute commands from.",
-  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dunstad/roboserver.git"
