--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
   "include": [
     "public/js/*",
     "public/js/lib/*",
-    "public/js/lib/three.js-master/build/three.js"
+    "public/js/lib/three.min.js"
   ],
   "typeAcquisition": {
     "include": [
