--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "package-all": "electron-packager . --overwrite --all --icon=public/assets/placeholder_icon.icns --prune=true --out=release-builds"
   },
   "dependencies": {
+    "ajv": "^5.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
