--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "test": "node ./public/js/server/robotTest.js",
     "start": "electron electronApp.js",
     "server": "node ./bin/www",
     "server-dev": "nodemon ./bin/www",
