--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "test": "node ./public/js/server/robotTest.js && node ./public/js/server/inventoryTest.js",
-    "start": "electron electronApp.js",
+    "start": "node ./bin/www",
     "server": "node ./bin/www",
     "server-dev": "nodemon ./bin/www",
     "electron": "electron electronApp.js",
