--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron": "^1.6.6",
     "express": "~4.13.4",
     "express-session": "^1.15.2",
+    "minecraft-data": "^2.21.0",
     "morgan": "~1.7.0",
     "nedb": "^1.8.0",
     "nedb-promise": "^2.0.1",
