--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "electron-packager": "^8.7.0",
+    "mocha-puppeteer": "^0.12.3",
     "nodemon": "^1.11.0"
   },
   "main": "electronApp.js",
