--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport.socketio": "^3.7.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.7.3"
   },
